# Customer_IT_Support

./: .gitignore  README.md  benchmark.py  build_db.py  calc_avg.py  chat_template_check.py  demo.py  download.py  infer.py  pyproject.toml  reranker.py  wget-log  wget-log.1
Customer_IT_Support/: test.csv
results/: deepseek-r1-distill-qwen-32b-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_priority.txt  deepseek-r1-distill-qwen-32b-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_queue.txt  deepseek-r1-distill-qwen-32b-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_type.txt  deepseek-r1-distill-qwen-32b-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptsummary.json  gpt-4o-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_priority.txt  gpt-4o-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_queue.txt  gpt-4o-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_type.txt  gpt-4o-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptsummary.json  llama-3.2-3b-instruct-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_priority.txt  llama-3.2-3b-instruct-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_queue.txt  llama-3.2-3b-instruct-rag-k5-Qwen3-Embedding-0.6B-reranker-colbertv2.0-english-promptclassification_report_type.txt  (+1 more)
